crates/ink/tests/ui/abi/sol/fail/message-name-override-invalid.stderr
error: `name` attribute argument value must begin with an alphabetic character, underscore or dollar sign
  --> tests/ui/abi/sol/fail/message-name-override-invalid.rs:14:31
   |
14 |         #[ink(message, name = "1myMessage")]
   |                               ^^^^^^^^^^^^
